# G431-ESC-MotorDriver

./: .gitignore  .gitmodules  .mxproject  G431-ESC-Firmware.ioc  LICENSE  README.md  TODO.md
Common/: CMakeLists.txt  MessageTypes.h
Documentation/: (80) Motor Control Part5 - 1 Motor Control library overview - YouTube.url  B-G431B-ESC Brushless Servo Controller | Hackaday io.url  CAN Timing.xmcd  MOOC - Motor Control Part 2 - Workshop - YouTube.url  Op amp calculation.xmcd  STM32Cube_FW_G4_V1.1.0 - Genvej.lnk
Documentation/Motors/: Motor types.md
Documentation/ST Material/: STM32G4 Online Training - STMicroelectronics.url
Documentation/en.mb1419_bom/: MB1419-G431CB-B01_BOM.xlsx  readme.txt
Firmware/: .clang-format  .gitignore  .mxproject  CMakeLists.txt  Current sense sampling scheme.md  PinMap.md  README.md
Firmware/Inc/: FirstOrderLPFSimple.h  FreeRTOSConfig.h  MainTask.h  Priorities.h  ProcessorInit.h  TestTask.h  main.h  portable.h  stm32g4xx_hal_conf.h
Firmware/Libraries/MotorDriver/: MotorDriver.cpp  MotorDriver.h
Firmware/SW4STM32/G431-ESC-Firmware/: .cproject  .cproject_org  .project  .project_org  G431-ESC-Firmware Debug.launch  G431-ESC-Firmware.xml
Firmware/Src/: FirstOrderLPFSimple.c  FreeRTOS-openocd.c  G431CB_WithEEProm.ld  MainTask.cpp  ProcessorInit.c  TestTask.cpp  freertos.c  heap_useNewlib.c  main.c  stm32g4xx_hal_timebase_tim.c  syscalls.c
Firmware/cmake/: .gitignore  FindBSP.cmake  FindCMSIS.cmake  FindFreeRTOS.cmake  FindHAL.cmake  gdb.cfg  git_submodule.cmake  info.cmake  print_target_properties.cmake  stm32.cmake  stm32_gcc.cmake
Firmware/cmake/misc/DefaultInterrupts/: CMakeLists.txt  DefaultInterrupts.c  DefaultInterrupts.h
Firmware/cmake/misc/FreeRTOS_Heap_Newlib/: README  heap_newlib.c  mallocTracker.cpp  mallocTracker.h  mallocTracker.hpp
Firmware/cmake/misc/FreeRTOS_MallocOverload/: MallocOverload.c  README
Firmware/cmake/misc/FreeRTOS_OpenOCD/: README
Firmware/cmake/misc/STM32_HAL/: stm32_hal.h
Firmware/cmake/misc/Syscalls/: CMakeLists.txt  sysmem.c
Firmware/cmake/misc/Sysmem/: CMakeLists.txt  sysmem.c
Firmware/cmake/stm32/: common.cmake  devices.cmake  f0.cmake  f1.cmake  f2.cmake  f3.cmake  f4.cmake  f7.cmake  g0.cmake  g4.cmake  h7.cmake  l0.cmake  l1.cmake  l4.cmake  l5.cmake  linker_ld.cmake  openocd_cfg.cmake  utilities.cmake
Inc/: FreeRTOSConfig.h  MainTask.h  MemoryManagement.h  MessageTypes.h  Priorities.h  freertos_tasks_c_additions.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_hal_timebase_tim.h  stm32g4xx_it.h
Libraries/MotorDriver/: MotorDriver.h
MATLAB/: .gitignore  MotorParameterEstimation.slx  MotorSim_ReducedFidelityComparison.slx  PWM_CurrentSense_Filtering.m  README.md
MATLAB/Calibration/: CurrentSenseCalibration.m  VbusCalibration.m
MATLAB/Codegen/: CodegenExample.m
MATLAB/DesignExploration/: ADC_Configuration.m  CurrentVarianceSurfPlot.m  LowPassFilterDesign.m  PWM_ChargeAndDischarge.m  PWM_ChargeAndDischarge_WithBackEMF.m  Test_Chirp.m  Test_Ramp.m
MATLAB/Estimation/: CurrentFIRfilter.m  VNHvsINA_ScaleEstimation.m
MATLAB/Model/: MechanicalModelStepTest.m  ModelLaplace.m  ModelStateSpace.m  getCurrentDown.m  getCurrentUp.m
MATLAB/Parameters/: Parameters_Controller.m  Parameters_Estimators.m  Parameters_Model.m  Parameters_Simulation.m  Parameters_Test_Chirp.m  Parameters_Test_Ramp.m
MATLAB/Processing/: MotorCurrentEKF.m  MotorCurrentEKF2.m  TestMotorCurrentEKF.m  TestMotorRL_EKF_FromG431DutySweep.m  TestMotorRL_EKF_FromSweepData.m  TestMotorRL_EKF_WithOscilloscopeMeasurements.m  TestRL_EKF_FromSweepData.m  getCurrentUp.m  parseData.m
MATLAB/Simulation/: ChirpTest.slx  ChirpTest_ParameterEstimation.slx  MechanicalParameterEstimation.slx  MotorParameterEstimation.slx  MotorSim.slx  MotorSim_FullFidelityWithPWM.slx  MotorSim_MechanicalParameterEstimation.slx  MotorSim_ReducedFidelityComparison.slx  SimpleMotorModel.slx
MATLAB/Tests/: PWM_Generator.m  SampleONcompensationGain.m  SampleTimeGainCompensation.m
MATLAB/subsystems/: DC_Motor_BrakeMode_Simplified.slx  MotorCurrentEKF_.slx  RL_EKF_.slx
Python/: .flake8  CANBus.py  CAN_Test.py  MotorDriverGUI.py  MotorDriverGUI2.py  MotorDriverGUI_Controller.py  README.md  conda_environment_setup.sh  lspc.py  python-format.sh  requirements.txt  setup.py  testMotorDriver_CAN.py  test_lspc.py
Research/: VNH Current sense.asc  inrush_limit.asc
SW4STM32/: startup_stm32g431xx.s
SW4STM32/G431-ESC-Firmware/: .cproject  .project  STM32G431CBUx_FLASH.ld
Src/: FirstOrderLPF.c  MainTask.cpp  MemoryManagement.c  ProcessorInit.c  freertos.c  heap_useNewlib.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  tmp_main.c  tmp_stm32g4xx_it.c
Tools/: CMakeLists.txt  README.md
Tools/cmake_common/: FindBrisk.cmake  FindQGLViewer.cmake  FindQGLViewer2.cmake  FindSuiteParse.cmake  cuda.cmake  openmp.cmake  pybind11.cmake  pybind11.py  qt5.cmake
Tools/cmake_common/easy_profiler/: easy_profiler.cmake  install.sh
Tools/cmake_common/eigen/: eigen.cmake  install.sh
Tools/cmake_common/g2o/: FindG2O.cmake  g2o.cmake  install.sh
Tools/cmake_common/gtsam/: FindEigen3.cmake  gtsam.cmake  gtsam_eigen.cmake  install.sh
Tools/cmake_common/openblas/: FindOpenBLAS.cmake  install.sh  openblas.cmake
Tools/cmake_common/opencv/: opencv24.cmake  opencv3.cmake  opencv4.cmake
Tools/cmake_common/pangolin/: install.sh  pangolin.cmake
Tools/cmake_common/qglviewer/: install.sh  qglviewer.cmake
Tools/cmake_common/spdlog/: install.sh  spdlog.cmake
Tools/cmake_common/yaml/: install.sh  yaml.cmake
Tools/include/: CMakeLists.txt
Tools/libs/lspc/: CMakeLists.txt  LSPC.h  Packet.hpp  README  Socket.cpp  SocketBase.hpp
Tools/libs/spdlog/: CMakeLists.txt
Tools/libs/spdlog/bench/: CMakeLists.txt
Tools/libs/spdlog/cmake/: ide.cmake  utils.cmake
Tools/libs/spdlog/example/: CMakeLists.txt
Tools/libs/spdlog/tests/: CMakeLists.txt
Tools/libs/utils/: CMakeLists.txt  formatting.hpp  utils.cpp  utils.hpp
Tools/src/LSPC_Test/: CMakeLists.txt  main.cpp
Tools/src/SerialDump/: CMakeLists.txt  main.cpp
(+90 files in other folders)
