MACRO(CMAKE_DIRECTORIES return_list)
    FILE(GLOB_RECURSE new_list CMakeLists.txt)
    SET(dir_list "")
    FOREACH(file_path ${new_list})
        GET_FILENAME_COMPONENT(dir_path ${file_path} PATH)
       	SET(dir_list ${dir_list} ${dir_path})
    ENDFOREACH()
    LIST(REMOVE_DUPLICATES dir_list)
    LIST(REMOVE_ITEM dir_list ${CMAKE_CURRENT_SOURCE_DIR})
    SET(${return_list} ${dir_list})
ENDMACRO()

CMAKE_DIRECTORIES(SUBDIRS)
message(STATUS "Adding global header (*.h, *.hpp) include directories:")

FOREACH(subdir ${SUBDIRS})
  message(STATUS "   " ${subdir})
  ADD_SUBDIRECTORY(${subdir})
  include_directories(${subdir})
ENDFOREACH()

set(GLOBAL_HEADERS ${GLOBAL_HEADERS} PARENT_SCOPE)
